refactor: improve fund import/search logic; add enums for sort/period, enhance ES mapping, and clean up utils
- Add SortField and ReturnPeriodType enums for robust sort/period mapping in FundSearchService
- Refactor FundSearchService to use new enums for mapping sort and return period fields
- Move string normalization to StringUtils for reuse; update FundExcelColumn to use it
- Update FundMapper to simplify return periods mapping
- Enhance FundDocument with detailed Elasticsearch field annotations
- Refactor FundRowMapper for improved cell value extraction and column mapping
- Update FundImportService error messages to English
- Refactor FundIndexService to use class-based ES mapping
- Adjust FundIndexStartupRunner logic for consistent startup import/sync
- Update ReturnPeriods entity with precision and scale for all columns
- Update application.yaml: disable index creation on startup, clean up logging